--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   "author": "Matt Thebert",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.9.1",
     "bower": "^1.3.12",
     "express": "^4.10.0",
-    "jade": "^1.7.0"
+    "jade": "^1.7.0",
+    "morgan": "^1.4.1",
+    "stylus": "^0.49.2"
   }
 }
