--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bower": "^1.3.12",
     "express": "^4.10.0",
     "jade": "^1.7.0",
+    "mongoose": "^3.8.18",
     "morgan": "^1.4.1",
     "stylus": "^0.49.2"
   }
