--- a/package.json
+++ b/package.json
@@ -6,10 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "engines":{
-      "node": "0.10.x",
-      "npm": "1.4.x",
-  },
+    "engines": {
+        "node": "0.10.x"
+    },
   "author": "Matt Thebert",
   "license": "ISC",
   "dependencies": {
